--- a/client_mobile/android/app/build.gradle
+++ b/client_mobile/android/app/build.gradle
@@ -35,13 +35,17 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.client_mobile"
+        applicationId = "my.area.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        manifestPlaceholders = [
+            'appAuthRedirectScheme': 'my.area.app',
+            'applicationName': 'io.flutter.app.FlutterApplication'
+        ]
     }
 
     buildTypes {
