--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   oauth2_client: ^3.3.0
   dotenv: ^4.2.0
   flutter_dotenv: ^5.2.1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
