--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dotenv: ^4.2.0
   flutter_dotenv: ^5.2.1
   font_awesome_flutter: ^10.8.0
+  go_router: ^14.6.1
 
 dev_dependencies:
   flutter_test:
