--- a/client_web/nginx.conf
+++ b/client_web/nginx.conf
@@ -4,11 +4,14 @@ server {
 
     location / {
         root /usr/share/nginx/html;
+        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
     # Serve mobile client binary
     location /client.apk {
         alias /usr/share/nginx/html/mobile_builds/client.apk;
+        add_header Content-Type application/vnd.android.package-archive;
+        add_header Content-Disposition attachment;
     }
 }
