feat(MariaDB ORM): Simple MariaDB with authentification

--- a/server/config.json
+++ b/server/config.json
@@ -4,6 +4,13 @@
   "gin_mode": "debug",
   "secret_key": "your-secure-secret-key",
   "cors": true,
+  "db": {
+    "host": "127.0.1",
+    "port": 3306,
+    "name": "area",
+    "user": "root",
+    "password": "root"
+  },
   "swagger": true,
   "cors_origins": [
     "http://localhost:3000",
