--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   font_awesome_flutter: ^10.8.0
   go_router: ^14.6.1
+  aad_oauth: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - .env.mobile
+      - assets/images/microsoft_logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
