feat(docker): add fullstack docker setup
Signed-off-by: Charles Madjeri <charles@madjeri.com>

--- a/client_mobile/Dockerfile
+++ b/client_mobile/Dockerfile
@@ -1,26 +1,22 @@
-FROM ghcr.io/cirruslabs/flutter:stable
+FROM ghcr.io/cirruslabs/flutter:3.24.5 AS builder
 
 WORKDIR /app
 
-ARG VITE_PORT
-ARG VITE_ENDPOINT
-ARG VITE_GOOGLE_CLIENT_ID
-ARG VITE_GOOGLE_CLIENT_SECRET
-ARG VITE_MICROSOFT_CLIENT_ID
-ARG VITE_LINKEDIN_CLIENT_ID
-ARG VITE_LINKEDIN_CLIENT_SECRET
-ARG VITE_SPOTIFY_CLIENT_ID
-ARG VITE_SPOTIFY_CLIENT_SECRET
+RUN git config --system --add safe.directory /sdks/flutter && \
+    git config --system --add safe.directory /app && \
+    chmod -R 777 /sdks/flutter
+
+COPY pubspec.* ./
+
+RUN flutter pub get
+
+COPY . .
+
 ARG API_URL
 ARG WEB_CLIENT_URL
 ARG MOBILE_CLIENT_URL
 ARG GITHUB_CLIENT_ID
 ARG GITHUB_CLIENT_SECRET
 
-COPY . .
-
-RUN flutter pub get
 RUN flutter build apk --release
-
 RUN mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/client.apk
-RUN chmod -R 755 build/app/outputs/flutter-apk/
