--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 VITE_PORT=8081
+
+# Server database environment variables
+DB_NAME=area
+DB_PASSWORD=change-me
+DB_HOST=mariadb
+DB_PORT=3306
+DB_USER=root
