--- a/client_web/nginx.conf
+++ b/client_web/nginx.conf
@@ -1,6 +1,11 @@
 server {
-    listen 8081;
+    listen 8081 ssl;
     server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         root /usr/share/nginx/html;
