--- a/client_web/package.json
+++ b/client_web/package.json
@@ -6,7 +6,7 @@
   "main": "electron.js",
   "scripts": {
     "start": "mkcert -install && mkcert localhost && vite",
-    "dev": "mkcert -install && mkcert localhost && vite",
+    "dev": "vite --host",
     "production": "vite --mode production",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
