--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   go_router: ^14.6.1
   aad_oauth: ^1.0.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
