fix(env): added BACKEND_BASE_URL env variable to setup backend ip

--- a/client_mobile/.env.mobile.example
+++ b/client_mobile/.env.mobile.example
@@ -16,6 +16,7 @@ VITE_SPOTIFY_CLIENT_SECRET=
 API_URL=http://localhost:8080
 WEB_CLIENT_URL=http://localhost:8081
 MOBILE_CLIENT_URL=http://localhost:8082
+BACKEND_BASE_URL=http://10.109.253.48:8080
 
 # OAuth credentials
 GITHUB_CLIENT_ID=your_github_client_id
