Sbr/feat mobile login (#132)
* feat(form): added a form to verify users input during login / registration

* feat(login): added verification at the beginning of the program to check whether we are login or not

* feat(login): can now login, linked with backend route /auth/login

* feat(register): added register option for user

* fix(env): added BACKEND_BASE_URL env variable to setup backend ip

* feat(logout): added button to logout in the dashboard

--- a/client_mobile/.env.mobile.example
+++ b/client_mobile/.env.mobile.example
@@ -2,6 +2,7 @@
 API_URL=http://localhost:8080
 WEB_CLIENT_URL=http://localhost:8081
 MOBILE_CLIENT_URL=http://localhost:8082
+BACKEND_BASE_URL=http://10.109.253.48:8080
 
 # OAuth credentials
 GITHUB_CLIENT_ID=your_github_client_id
