--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -71,7 +71,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - .env.mobile
-      - assets/images/microsoft_logo.png
+      - assets/images/microsoft.png
+      - assets/images/spotify.png
+      - assets/images/google.png
+      - assets/images/discord.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
