feat(oauth): added pages to link our account with microsoft, spotify google and discord oauth (only microsoft fonctional)

--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
       - .env.mobile
       - assets/images/microsoft.png
       - assets/images/spotify.png
+      - assets/images/spotify_green.png
       - assets/images/google.png
       - assets/images/discord.png
   #   - images/a_dot_burr.jpeg
