fix(.env): added google and microsoft template

--- a/client_mobile/.env.mobile.example
+++ b/client_mobile/.env.mobile.example
@@ -8,4 +8,8 @@ BACKEND_BASE_URL=http://10.109.253.48:8080
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
 
+GOOGLE_CLIENT_ID=your_google_client_id
+
+MICROSOFT_CLIENT_ID=your_microsoft_client_id
+
 # Add other environment variables as needed
