--- a/client_mobile/.env.mobile.example
+++ b/client_mobile/.env.mobile.example
@@ -12,4 +12,7 @@ GOOGLE_CLIENT_ID=your_google_client_id
 
 MICROSOFT_CLIENT_ID=your_microsoft_client_id
 
+SPOTIFY_CLIENT_ID=your_spotify_client_id
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
+
 # Add other environment variables as needed
