feat(spotify): getting access token for spotify oauth

--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   aad_oauth: ^1.0.1
   http: ^1.2.2
   google_sign_in: ^6.2.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
