--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,8 @@ FROM golang:1.23.4-alpine AS development
 
 WORKDIR /app
 
+RUN apk add --no-cache wget git
+
 RUN go install github.com/air-verse/air@latest
 
 COPY go.mod go.sum ./
@@ -11,6 +13,9 @@ RUN go mod download
 COPY . .
 
 EXPOSE 8080
+
+HEALTHCHECK --interval=10s --timeout=5s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
 
 CMD ["air", "-c", ".air.toml"]
 
@@ -32,14 +37,13 @@ CMD ["./main"]
 # Final stage
 FROM alpine:3.20.3
 
-RUN apk add --no-cache ca-certificates && \
+RUN apk add --no-cache ca-certificates wget && \
     adduser -D appuser
 
 WORKDIR /app
 
 COPY --from=production /app/main .
 COPY --from=production /app/config.json .
-COPY .env.server .env
 
 RUN chown -R appuser:appuser /app && \
     chmod +x /app/main
@@ -48,7 +52,7 @@ USER appuser
 
 EXPOSE 8080
 
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+HEALTHCHECK --interval=10s --timeout=5s --start-period=5s --retries=3 \
     CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
 
 CMD ["./main"]
