refacto(oauth): generic oauth
Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

docs(swagger): add router doc

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

fix(.env.example): add new key

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,18 @@ DB_NAME=area
 DB_USER=root
 DB_PASSWORD=change-me
 RMQ_URL="amqp://guest:guest@rabbitmq:5672/"
+
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+TWITCH_CLIENT_ID=
+TWITCH_CLIENT_SECRET=
+
+MICROSOFT_CLIENT_ID=
+MICROSOFT_CLIENT_SECRET=
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
