feat(discord): getting access token for discord oauth

--- a/client_mobile/.env.mobile.example
+++ b/client_mobile/.env.mobile.example
@@ -12,4 +12,7 @@ GOOGLE_CLIENT_ID=your_google_client_id
 
 MICROSOFT_CLIENT_ID=your_microsoft_client_id
 
+DISCORD_CLIENT_ID=your_discord_client_id
+DISCORD_CLIENT_SECRET=your_discord_client_secret
+
 # Add other environment variables as needed
