--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   oauth2: ^2.0.3
-  flutter_web_auth: ^0.5.0
+  flutter_web_auth: ^0.6.0
   flutter_appauth: ^8.0.1
   oauth2_client: ^3.3.0
   dotenv: ^4.2.0
@@ -46,6 +46,7 @@ dependencies:
   aad_oauth: ^1.0.1
   http: ^1.2.2
   google_sign_in: ^6.2.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
