Sbr/feat mobile discord oauth (#167)
* feat(discord): getting access token for discord oauth

* fix(code_challenge): refactoring generateCodeVerifier and generateCodeChallenge inside Utils class

* fix(test_page): removed test page from main.dart

* fix(regex): turned charset into regex for generation of code verifier

---------

Signed-off-by: Samuel Bruschet <samuel.bruschet@gmail.com>

--- a/client_mobile/.env.mobile.example
+++ b/client_mobile/.env.mobile.example
@@ -12,6 +12,9 @@ GOOGLE_CLIENT_ID=your_google_client_id
 
 MICROSOFT_CLIENT_ID=your_microsoft_client_id
 
+DISCORD_CLIENT_ID=your_discord_client_id
+DISCORD_CLIENT_SECRET=your_discord_client_secret
+
 SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
 
