feat(message): add message sending
Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

Still need to pass reaction when consumer is ready

feat(whispering): add message whispering

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

feat(consumer): create action consumer

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

feat(reaction): add reaction consumer

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

del(prev consumer): delete useless consumer

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

fix(todo): fix todo

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

docs(action/reaction): add docs on action reaction consumer

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

del(code): del useless code

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

docs(action/reaction): update docs on action reaction consumer

Signed-off-by: Mathieu <mathieu.borel@epitech.eu>

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -19,6 +19,24 @@ services:
     environment:
       - GO_ENV=development
 
+  area-server-action-consumer:
+    build:
+      target: development
+    volumes:
+      - ./server:/app
+      - go-modules:/go/pkg/mod
+    environment:
+      - GO_ENV=development
+
+  area-server-reaction-consumer:
+    build:
+      target: development
+    volumes:
+      - ./server:/app
+      - go-modules:/go/pkg/mod
+    environment:
+      - GO_ENV=development
+
 volumes:
   ssl-certs:
   go-modules:
