--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,8 @@ web_modules/
 .env.production.local
 .env.local
 
+.secrets
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
