--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       interval: 5s
       timeout: 15s
       retries: 5
-    restart: unless-stopped
+    restart: always
+    profiles: [ "server", "web", "mobile", "full" ]
 
   mariadb:
     image: mariadb:11.4.4
@@ -35,7 +36,8 @@ services:
       retries: 5
     env_file:
       - .env
-    restart: unless-stopped
+    restart: always
+    profiles: [ "server", "web", "mobile", "full" ]
 
   area-server:
     build:
@@ -60,13 +62,14 @@ services:
       - area_network
     env_file:
       - server/.env
-    restart: unless-stopped
+    restart: always
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health" ]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 40s
+    profiles: [ "server", "web", "mobile", "full" ]
 
   area-server-action-consumer:
     build:
@@ -129,11 +132,16 @@ services:
         - GITHUB_CLIENT_ID
         - GITHUB_CLIENT_SECRET
     volumes:
-      - area_client_data:/app/build/app/outputs/flutter-apk
+      - mobile_builds:/app/build/app/outputs/flutter-apk
     networks:
       - area_network
     env_file:
       - ./client_mobile/.env
+    profiles: [ "mobile", "full" ]
+    depends_on:
+      area-server:
+        condition: service_healthy
+    restart: "no"
 
   area-client-web:
     build:
@@ -157,46 +165,90 @@ services:
     ports:
       - "${VITE_PORT}:${VITE_PORT}"
     volumes:
-      - area_client_data:/usr/share/nginx/html/mobile_builds:ro
+      - mobile_builds:/usr/share/nginx/html/mobile_builds:ro
     depends_on:
-      - area-client-mobile
-      - area-server
+      area-server:
+        condition: service_healthy
+      area-client-mobile:
+        condition: service_completed_successfully
+        required: false
     networks:
       - area_network
     env_file:
       - ./client_web/.env
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider --no-check-certificate https://localhost:${VITE_PORT} || exit 1"]
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider --no-check-certificate https://localhost:${VITE_PORT} || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 60s
+    profiles: [ "web", "full" ]
 
-  healthcheck-reporter:
+  server-healthcheck:
     image: alpine:3.20.3
     depends_on:
+      mariadb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      area-server:
+        condition: service_healthy
+    profiles: [ "server" ]
+    restart: "no"
+
+  web-healthcheck:
+    image: alpine:3.20.3
+    depends_on:
+      mariadb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
       area-server:
         condition: service_healthy
       area-client-web:
         condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-      mariadb:
-        condition: service_healthy
-    command: |
-      sh -c '
-        echo "🚀 All services are up and running!"
-        echo "📱 Web client is available at: https://localhost:${VITE_PORT}"
-        echo "⚙️  API is available at: http://localhost:8080"
-        echo "🐰 RabbitMQ management UI is available at: http://localhost:15672"
-      '
     environment:
       - VITE_PORT=${VITE_PORT}
+    profiles: [ "web" ]
+    restart: "no"
+
+  mobile-healthcheck:
+    image: alpine:3.20.3
+    depends_on:
+      mariadb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      area-server:
+        condition: service_healthy
+      area-client-mobile:
+        condition: service_completed_successfully
+    profiles: [ "mobile" ]
+    restart: "no"
+
+  full-healthcheck:
+    image: alpine:3.20.3
+    depends_on:
+      mariadb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      area-server:
+        condition: service_healthy
+      area-client-web:
+        condition: service_healthy
+      area-client-mobile:
+        condition: service_completed_successfully
+    environment:
+      - VITE_PORT=${VITE_PORT}
+    profiles: [ "full" ]
+    restart: "no"
 
 volumes:
-  area_client_data:
+  mobile_builds:
   mariadb_data:
+
 
 networks:
   area_network:
