--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,7 +16,30 @@ env:
   ACT: ${{ vars.ACT }}
 
 jobs:
+  test-client-web:
+    if: "!contains(github.event.head_commit.message, 'WIP') && !contains(github.event.head_commit.message, 'wip')"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: 'client_web/package-lock.json'
+
+      - name: Install dependencies
+        working-directory: ./client_web
+        run: npm ci
+
+      - name: Run tests
+        working-directory: ./client_web
+        run: npm run test
+
   build:
+    needs: test-client-web
     if: "!contains(github.event.head_commit.message, 'WIP') && !contains(github.event.head_commit.message, 'wip')"
     runs-on: ubuntu-latest
     environment: docker-build
