evol(ci): reduce load
Signed-off-by: Charles Madjeri <charles@madjeri.com>

--- a/.github/workflows/deploy-documentation.yml
+++ b/.github/workflows/deploy-documentation.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - 'master'
+    paths-ignore:
+      - 'client_web/**'
+      - 'client_mobile/**'
+      - 'server/**'
+      - 'rabbit-mq/**'
 
 permissions:
   contents: write
