--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
       context: ./server
       dockerfile: Dockerfile_action_consumer
     volumes:
+      - ./server:/app:rw
       - ./ssl:/app/ssl:ro
     environment:
       DB_HOST: ${DB_HOST}
@@ -104,6 +105,7 @@ services:
       context: ./server
       dockerfile: Dockerfile_reaction_consumer
     volumes:
+      - ./server:/app:rw
       - ./ssl:/app/ssl:ro
     environment:
       DB_HOST: ${DB_HOST}
