fix(docker-setup): fix server air hot-reload
Signed-off-by: Charles Madjeri <charles@madjeri.com>

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -108,6 +108,6 @@ jobs:
       - name: Build and test
         run: docker compose --profile full build
 
-      - name: Push images if on main branch
-        if: ${{ github.ref == 'refs/heads/main' && env.ACT != 'true' }}
-        run: docker compose push 
+      - name: Push images if on master branch
+        if: ${{ github.ref == 'refs/heads/master' && env.ACT != 'true' }}
+        run: docker compose push
