--- a/server/.air.toml
+++ b/server/.air.toml
@@ -5,8 +5,8 @@ tmp_dir = "tmp"
 cmd = "go build -o ./tmp/area cmd/area/main.go"
 bin = "./tmp/area"
 full_bin = "./tmp/area"
-include_ext = ["go", "tpl", "tmpl", "html"]
-exclude_dir = ["assets", "tmp", "vendor"]
+include_ext = ["go", "tpl", "tmpl", "html", "env"]
+exclude_dir = ["assets", "tmp", "vendor", "testdata"]
 include_dir = []
 exclude_file = []
 delay = 1000
