--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -17,4 +17,8 @@ EXPOSE 8080
 HEALTHCHECK --interval=10s --timeout=5s --start-period=5s --retries=3 \
     CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
 
+RUN mkdir -p tmp && chmod -R 777 tmp
+
+VOLUME ["/app"]
+
 CMD ["air", "-c", ".air.toml"]
