feat(client_mobile): add app icon
Signed-off-by: Charles Madjeri <charles@madjeri.com>

--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   aad_oauth: ^1.0.1
   flutter_inappwebview: ^6.1.5
   crypto: ^3.0.6
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
@@ -35,4 +36,5 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/area.png
     - assets/images/
