--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,7 +136,16 @@ services:
         - GITHUB_CLIENT_ID
         - GITHUB_CLIENT_SECRET
     volumes:
+      - ./client_mobile:/app
+      - ./client_mobile/build/app/outputs/flutter-apk:/app/build/app/outputs/flutter-apk
       - mobile_builds:/app/build/app/outputs/flutter-apk
+      - flutter_cache:/root/.pub-cache:rw
+      - android_cache:/root/.gradle:rw
+    ports:
+      - "8082:8082"
+      - "8888:8888"
+    environment:
+      - FLUTTER_ENV=production
     networks:
       - area_network
     env_file:
@@ -146,6 +155,12 @@ services:
       server:
         condition: service_healthy
     restart: "no"
+    healthcheck:
+      test: [ "CMD", "test", "-d", "/app/build/app/outputs/flutter-apk" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
 
   client_web:
     build:
@@ -227,7 +242,7 @@ services:
       server:
         condition: service_healthy
       client_mobile:
-        condition: service_completed_successfully
+        condition: service_healthy
     profiles: [ "mobile" ]
     restart: "no"
 
@@ -252,6 +267,8 @@ services:
 volumes:
   mobile_builds:
   mariadb_data:
+  flutter_cache:
+  android_cache:
 
 
 networks:
