feat(client_mobile): add apk release build
Signed-off-by: Charles Madjeri <charles@madjeri.com>

--- a/client_mobile/.gitignore
+++ b/client_mobile/.gitignore
@@ -111,3 +111,18 @@ build/
 *.log
 flutter_cache/
 android_cache/
+
+# Dart tool directory
+.dart_tool/
+
+# Pub cache
+.pub-cache/
+
+# Build directory
+build/
+
+# Packages
+.packages
+
+# Pubspec lock
+pubspec.lock
