--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,10 +137,10 @@ services:
         - GITHUB_CLIENT_SECRET
     volumes:
       - ./client_mobile:/app
-      - ./client_mobile/build/app/outputs/flutter-apk:/app/build/app/outputs/flutter-apk
       - mobile_builds:/app/build/app/outputs/flutter-apk
-      - flutter_cache:/root/.pub-cache:rw
-      - android_cache:/root/.gradle:rw
+      - flutter_data:/root/.local/share/flutter:rw
+      - android_data:/root/.gradle:rw
+      - ide_support:/app/.dart_tool:rw
     ports:
       - "8082:8082"
       - "8888:8888"
@@ -155,12 +155,6 @@ services:
       server:
         condition: service_healthy
     restart: "no"
-    healthcheck:
-      test: [ "CMD", "test", "-d", "/app/build/app/outputs/flutter-apk" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
 
   client_web:
     build:
@@ -189,7 +183,7 @@ services:
       server:
         condition: service_healthy
       client_mobile:
-        condition: service_completed_successfully
+        condition: service_started
         required: false # TODO: remove before final defense
     networks:
       - area_network
@@ -242,7 +236,7 @@ services:
       server:
         condition: service_healthy
       client_mobile:
-        condition: service_healthy
+        condition: service_started
     profiles: [ "mobile" ]
     restart: "no"
 
@@ -258,7 +252,7 @@ services:
       client_web:
         condition: service_healthy
       client_mobile:
-        condition: service_completed_successfully
+        condition: service_started
     environment:
       - VITE_PORT=${VITE_PORT}
     profiles: [ "full" ]
@@ -267,8 +261,9 @@ services:
 volumes:
   mobile_builds:
   mariadb_data:
-  flutter_cache:
-  android_cache:
+  flutter_data:
+  android_data:
+  ide_support:
 
 
 networks:
