--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,8 +144,6 @@ services:
     ports:
       - "8082:8082"
       - "8888:8888"
-    environment:
-      - FLUTTER_ENV=production
     networks:
       - area_network
     env_file:
@@ -155,6 +153,12 @@ services:
       server:
         condition: service_healthy
     restart: "no"
+    healthcheck:
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "-O", "/dev/null", "http://0.0.0.0:8082" ]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 150s
 
   client_web:
     build:
@@ -236,7 +240,7 @@ services:
       server:
         condition: service_healthy
       client_mobile:
-        condition: service_started
+        condition: service_healthy
     profiles: [ "mobile" ]
     restart: "no"
 
