--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.2.2
   google_sign_in: ^6.2.2
   url_launcher: ^6.3.1
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +79,10 @@ flutter:
       - assets/images/spotify_green.png
       - assets/images/google.png
       - assets/images/discord.png
+      - assets/images/github.png
+      - assets/images/twitch.png
+      - assets/images/twitch_white.png
+      - assets/images/profile.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
