--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_sign_in: ^6.2.2
   url_launcher: ^6.3.1
   flutter_inappwebview: ^6.1.5
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
