--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   google_fonts: ^6.2.1
   crypto: ^3.0.6
   flutter_launcher_icons: ^0.14.2
+  simple_animations: ^5.1.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
