Sbr/feat list workflow page (#209)
* feat(workflows): added workflow card template

* feat(workflows): workflows are now dismissible, linked workflow list page with workflow creation page

* fix(workflow card): added description, border to workflow card

* fix(workflow): fixed empty description in workflow card

* feat(animations): added loading animations for profile page and workflow list

* fix(comments): removed unnecessaries comments

* fix(language): turned french text into english for charles goat

--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -23,8 +23,11 @@ dependencies:
   google_sign_in: ^6.2.2
   aad_oauth: ^1.0.1
   flutter_inappwebview: ^6.1.5
+  google_fonts: ^6.2.1
   crypto: ^3.0.6
   flutter_launcher_icons: ^0.14.2
+  simple_animations: ^5.1.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
