--- a/server/.air.toml
+++ b/server/.air.toml
@@ -7,7 +7,7 @@ bin = "./tmp/area"
 full_bin = "./tmp/area"
 include_ext = ["go", "tpl", "tmpl", "html", "env"]
 exclude_dir = ["assets", "tmp", "vendor", "testdata"]
-include_dir = []
+include_dir = ["internal", "cmd/area"]
 exclude_file = []
 delay = 1000
 stop_on_error = true
