--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,8 +42,38 @@ jobs:
         working-directory: ./client_web
         run: npm run test
 
+  test-server:
+    if: ${{ !contains(github.event.head_commit.message, 'WIP') && !contains(github.event.head_commit.message, 'wip') }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
+          cache: true
+
+      - name: Install dependencies
+        run: go mod tidy
+
+      - name: Run tests
+        run: go test ./... -v -coverprofile=coverage.out
+
+      - name: Display test coverage
+        run: go tool cover -func=coverage.out
+
+      - name: Upload test coverage report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.out
+
+
   build:
-    needs: test-client-web
+    needs: [test-client-web, test-server]
     if: ${{ !contains(github.event.head_commit.message, 'WIP') && !contains(github.event.head_commit.message, 'wip') }}
     runs-on: ubuntu-latest
     environment: docker-build
